# StereoReconstruction

./: .gitignore  README.md
project/: CMakeLists.txt  blockmatch.cpp  blockmatch.h  camerasensor.h  exporter.h  main.cpp  matcher.cpp  matcher.h  patchmatch.cpp  patchmatch.h  patchmatchvectorfield.cpp  patchmatchvectorfield.h  prerequisites.h  stereoimage.cpp  stereoimage.h
project/data/blender/: calib.txt  calib_classroom_0deg.txt  calib_classroom_15deg.txt  calib_classroom_1deg.txt  calib_toys.txt  stereo_reconstruction.blend
project/data/perfect/: calib_air.txt  calib_couch.txt  calib_flower.txt  calib_play.txt  calib_tonne.txt
project/data/semper/: calib_statue.txt
project/python/: s.py
report/images/: image_information.txt
